Fix spacing to browser edges

--- a/docs/module2-solution/css/styles.css
+++ b/docs/module2-solution/css/styles.css
@@ -9,7 +9,7 @@
 h1 {
   text-align: center;
   font-size: 175%;
-  margin-top: 20px;
+  margin-top: 30px;
   margin-bottom: 30px;
 }
 #p1 {
@@ -48,6 +48,7 @@ h1 {
 }
 .row {
   width: 100%;
+  padding: 1%
 }
 
 /********** Desktop View **********/
